# KalmanFilter

./: CMakeLists.txt  README.md  kalman_filter.pc.in
src/: kalman_filter.cpp  path_evaluator.cpp
src/include/: kalman_filter.hpp  path_evaluator.hpp  utils.hpp
